change: clean `.cabal` and format

--- a/encode-zigzag.cabal
+++ b/encode-zigzag.cabal
@@ -21,14 +21,6 @@ tested-with:
 common common
   default-language: Haskell2010
 
-  default-extensions:
-    BangPatterns BlockArguments CPP DataKinds DerivingVia ExplicitNamespaces
-    FlexibleContexts FlexibleInstances ForeignFunctionInterface GADTs
-    GeneralizedNewtypeDeriving ImportQualifiedPost KindSignatures LambdaCase
-    MagicHash NegativeLiterals PatternSynonyms PolyKinds RankNTypes
-    RoleAnnotations ScopedTypeVariables StandaloneKindSignatures TupleSections
-    TypeApplications ViewPatterns UnboxedTuples UnliftedNewtypes
-
   ghc-options:
     -Wall
     -Wcompat
@@ -43,7 +35,6 @@ common common
 
   build-depends:
     , base     ^>= 4.16
-    , ghc-prim ^>= 0.8
 
 library
   import:         common
@@ -52,3 +43,6 @@ library
   exposed-modules:
     Data.Encode.ZigZag
     Data.Encode.ZigZag.Prim
+
+  build-depends:
+    , ghc-prim ^>= 0.8
