--- a/encode-zigzag.cabal
+++ b/encode-zigzag.cabal
@@ -1,8 +1,8 @@
-cabal-version: 2.4
+cabal-version: 2.2
 
 name:         encode-zigzag
 category:     Data
-version:      0.0.0
+version:      1.0.0
 synopsis:     Zigzag encoding signed integers.
 description:  Zigzag encoding signed integers.
 license:      BSD-3-Clause
@@ -17,6 +17,9 @@ extra-source-files:
 
 tested-with:
   GHC == 9.2.1
+  GHC == 9.0.1
+  GHC == 8.10.7
+  GHC == 8.8.4
 
 common common
   default-language: Haskell2010
@@ -31,10 +34,14 @@ common common
     -Widentities
     -Wredundant-constraints
     -Wpartial-fields
-    -Wunused-packages
+
+
+  if (impl(ghc >= 8.10))
+    ghc-options:
+      -Wunused-packages
 
   build-depends:
-    , base     ^>= 4.16
+    base >= 4.13
 
 library
   import:         common
@@ -44,5 +51,6 @@ library
     Data.Encode.ZigZag
     Data.Encode.ZigZag.Prim
 
-  build-depends:
-    , ghc-prim ^>= 0.8
+  other-modules:
+    Data.Encode.ZigZag.Compat
+
